fix alignment and spacing top of open mobile view app

--- a/src/components/mobile-view/app-group/app-group-big/MobileAppGroupBig.css
+++ b/src/components/mobile-view/app-group/app-group-big/MobileAppGroupBig.css
@@ -65,7 +65,7 @@ div.MobileOsAppGroupDimBehind {
   left: 0;
   opacity: 0.9;
   position: fixed;
-  top: 1.5rem;
+  top: 2rem;
   width: 100%;
   z-index: 4;
 }
