--- a/src/components/mobile-view/open-app/OpenMobileApp.css
+++ b/src/components/mobile-view/open-app/OpenMobileApp.css
@@ -1,12 +1,11 @@
 div.openApp {
   background-color: var(--dark-color);
   color: black;
-  left: 0;
-  height: calc(100% - 2rem);
   overflow-y: scroll;
   position: fixed;
   top: 2rem;
   width: 100%;
+  height: 100%;
   z-index: 10;
 }
 
